# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  hello.py  pyproject.toml
src/extract_exercise_list/: main.py
src/pre_commit_hooks/: extract_exercise_list.py
tests/: test_extract_exercises.py  test_extract_heading.py  test_extract_priority.py
tests/data/: extract_exercises_01.md  extract_exercises_02.md  extract_heading_01.md  extract_heading_02.md  extract_priority_01.md  extract_priority_02.md
