[project]
name = "pre-commit-hooks"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
extract-exercise-list = "pre_commit_hooks.extract_exercise_list:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pre_commit_hooks"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
